--- a/js/package.json
+++ b/js/package.json
@@ -6,7 +6,8 @@
   "description": "",
   "main": "./src/app.js",
   "dependencies": {
-    "foris": "3.4.0"
+    "foris": "3.4.0",
+    "minimist": "^1.2.5"
   },
   "peerDependencies": {
     "prop-types": "15.7.2",
@@ -15,26 +16,26 @@
     "react-router-dom": "5.1.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
     "@testing-library/react": "^8.0.9",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.1",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-reforis": "^1.0.0",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "jest-mock-axios": "^3.2.0",
-    "moment-timezone": "^0.5.27",
+    "moment-timezone": "^0.5.28",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-router-dom": "5.1.2",
     "style-loader": "^0.23.1",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "watch": "webpack --watch --mode=development",
